--- a/shiro_about/shiro-spring/pom.xml
+++ b/shiro_about/shiro-spring/pom.xml
@@ -50,6 +50,30 @@
       <version>${shiroversion}</version>
     </dependency>
 
+    <!--从数据库中读取数据  所以需要 mysql spring jdbc 连接池-->
+
+    <!--mysql -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>5.1.45</version>
+    </dependency>
+      <!--数据库连接池-->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>1.1.6</version>
+    </dependency>
+    <!--spring jdbc-->
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jdbc</artifactId>
+      <version>4.1.6.RELEASE</version>
+    </dependency>
+
+
+
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
