--- a/shiro_about/shiro-spring/pom.xml
+++ b/shiro_about/shiro-spring/pom.xml
@@ -79,6 +79,11 @@
       <artifactId>junit</artifactId>
       <version>4.12</version>
     </dependency>
+      <dependency>
+          <groupId>javax.servlet</groupId>
+          <artifactId>servlet-api</artifactId>
+          <version>2.5</version>
+      </dependency>
 
   </dependencies>
 </project>
